--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,11 @@
         color: #6070ff;
         font-size: 30px;
         font-weight: bold;
+        margin-left: 100px;
     }
     .portion {
         position: relative;
-        min-width: 46rem;
+        min-width: 12rem;
         height: 28.7rem;
         background-color: white;
         border-bottom-left-radius: 5.625rem;
@@ -147,13 +148,17 @@
         position: relative;
         width: 24px;
         height: 24px;
+        margin-left: 50px;
     }
     .toolbar-dark-compact .union {
         position: absolute;
         width: 18px;
         height: 12px;
         top: 6px;
-        left: 3px;
+        left: 05px;
+    }
+    .toolbar-dark-compact .union:hover {
+        font-size: 1.08rem;
     }
     .social_icons {
         position: relative;
